refactor: basic info

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -15,3 +15,9 @@ slorber:
   title: Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+
+Zzhiter:
+  name: Zzhiter
+  title: Zzhiter
+  url: https://github.com/Zzhiter
+  image_url: https://github.com/Zzhiter.png
